--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,7 +8,7 @@ jobs:
   build: 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkkout
+      - uses: actions/checkkout@v3
       - name: Use Node.js version 16
         uses: actions/setup-node@v2
         with: 
